--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -6,3 +6,11 @@
 .title {
   text-align: center;
 }
+.container {
+  border: 1px solid grey;
+}
+.transformation {
+  width: 100px;
+  //   border: 1px solid red;
+  text-align: center;
+}
