styling of history component

--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,16 +1,23 @@
 .wrap {
-  display: flex;
-  width: 200px;
-  justify-content: space-evenly;
+  display: grid;
+  min-width: 200px;
+  grid-template-columns: 1fr 1fr 3fr;
 }
 .title {
   text-align: center;
 }
 .container {
   border: 1px solid grey;
+  padding: 20px;
 }
 .transformation {
   width: 100px;
-  //   border: 1px solid red;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.num,
+.action {
+  width: 40px;
 }
