history showing newest operation on top

--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,7 +1,7 @@
 .wrap {
   display: grid;
   min-width: 200px;
-  grid-template-columns: 1fr 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
 }
 .title {
   text-align: center;
